Fix project not showing on refresh bug.
Sending wrong number of parameters to save_state() function.
Also a couple of small visual tweaks with font weights.

--- a/portal/www/common/css/dashboard.css
+++ b/portal/www/common/css/dashboard.css
@@ -7,7 +7,7 @@
 }
 
 .activesection {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 #sectionswitch a {
